apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.google.dagger.hilt.android'

android {
    compileSdk 34

    defaultConfig {
        applicationId "com.littlefox.app.foxschool"
        minSdkVersion 23
        targetSdkVersion 34
        versionCode 1
        versionName "1.0.0"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }

    buildTypes {
        release {
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }

    buildFeatures{
        compose true
        buildConfig = true
    }

    composeOptions{
        kotlinCompilerExtensionVersion = "1.5.15"
    }

    kotlinOptions {
        jvmTarget = '17' // 또는 11, 17 등
        freeCompilerArgs += ['-Xuse-ir']
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }


    namespace 'com.littlefox.app.foxschool'
}

buildscript
        {
            ext.support_lib_version ='28.0.0'
            ext.support_google_play ="12.0.1"
            ext.lifecycle_version = "1.1.1"
            ext.exoplayer_version = '2.10.1'
            ext.billing_version = "3.0.0"
            ext.room_version = "2.3.0"
        }

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.google.firebase:firebase-database:19.2.1'
    implementation platform('com.google.firebase:firebase-bom:29.0.0')

    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    implementation 'com.jakewharton:butterknife:10.2.3'
    kapt 'com.jakewharton:butterknife-compiler:10.2.3'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'

    implementation "com.andkulikov:transitionseverywhere:1.8.0"
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation "androidx.biometric:biometric-ktx:1.2.0-alpha03" // 생체인증 관련 라이브러리s

    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'com.google.code.gson:gson:2.9.0'
    testImplementation 'junit:junit:4.12'

    implementation 'com.google.android.gms:play-services-base:17.6.0'

    implementation 'com.google.firebase:firebase-core:20.0.0'
    // Recommended: Add the Firebase SDK for Google Analytics.

    implementation 'com.google.firebase:firebase-messaging-ktx'
    implementation 'com.google.firebase:firebase-analytics-ktx'

    // Add the Firebase Crashlytics SDK.
    implementation 'com.google.firebase:firebase-crashlytics:18.2.4'

    implementation 'com.github.only2433:LittlefoxLogMoniter:1.0.14'
    implementation 'com.github.only2433:LittlefoxSystemLibrary:2.0.12'
    implementation 'com.github.only2433:LittlefoxViewLibrary:1.1.7'
    implementation 'com.ssomai:android.scalablelayout:2.1.6'
    implementation 'com.github.axet:zip4j:1.3.2-2'

    implementation 'com.github.fafaldo:fab-toolbar:1.2.0'
    implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
    implementation "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
    implementation 'me.kaelaela:verticalviewpager:1.0.0@aar'
    implementation 'com.android.volley:volley:1.2.1'
    implementation "com.android.billingclient:billing:$billing_version"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
    implementation 'io.github.lizhangqu:coreprogress:1.0.2'
    implementation "androidx.core:core-ktx:1.13.1"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"


    implementation "androidx.room:room-runtime:2.4.2"
    kapt "androidx.room:room-compiler:2.4.2"
    implementation "androidx.room:room-ktx:2.4.2"

    implementation "com.google.dagger:hilt-android:$hilt_version"
    kapt "com.google.dagger:hilt-compiler:$hilt_version"
    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"

    implementation "androidx.compose.ui:ui:$compose_version"
    implementation "androidx.compose.animation:animation:$compose_version"
    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
    implementation "androidx.compose.material:material:1.7.3"
    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.6"
    implementation "androidx.compose.material3:material3-android:1.3.0"
    implementation("com.github.bumptech.glide:glide:4.12.0")
    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
    kapt("com.github.bumptech.glide:compiler:4.12.0")
    // Glide Compose Integration
    implementation("com.github.bumptech.glide:compose:1.0.0-beta01")
    implementation "io.coil-kt:coil-compose:2.1.0" // Coil for Compose
    implementation "me.onebone:toolbar-compose:2.3.5"
    implementation 'androidx.compose.foundation:foundation:1.6.0-beta01'
    implementation "androidx.paging:paging-compose:3.3.2"
    implementation "androidx.paging:paging-runtime-ktx:3.3.2"


    // 테스트를 위한 추가 의존성
    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"

    implementation "androidx.fragment:fragment-ktx:1.8.3"
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.6'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.6'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6'

    // retrofit2
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    // Gson 변환기
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
    implementation 'com.squareup.retrofit2:retrofit-converters:2.5.0'

    implementation "androidx.paging:paging-runtime-ktx:3.3.2"
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"



}

